--- a/beststore/src/main/resources/templates/products/index.html
+++ b/beststore/src/main/resources/templates/products/index.html
@@ -50,7 +50,7 @@
 
 <div class="container mt-5">
     <h1 class="text-center my-4">Manage products</h1>
-    <a class="btn btn-primary" href="/product/create">Create Product</a><br><br>
+    <a class="btn btn-primary" href="create">Create Product</a><br><br>
 
     <table class="table table-bordered">
         <thead class="thead-dark">
@@ -88,10 +88,10 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 
-    <footer class="footer text-center">
-        <div class="container">
-       <p> © 2024 Products Store. All rights reserved.</p>
-            </div>
-    </footer>
+<!--    <footer class="footer text-center">-->
+<!--        <div class="container">-->
+<!--       <p> © 2024 Products Store. All rights reserved.</p>-->
+<!--            </div>-->
+<!--    </footer>-->
 </body>
 </html>
