--- a/beststore/src/main/resources/templates/products/index.html
+++ b/beststore/src/main/resources/templates/products/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>Manage products</title>
     <meta charset="utf-8">
@@ -79,7 +79,10 @@
                 <td th:text="${product.createdAt.toString().substring(0,10)}"></td>
                 <td style="white-space: nowrap">
                     <a class="btn btn-primary btn-sm" th:href="@{/products/edit(id=${product.id})}">Edit</a>
-                    <a class="btn btn-danger btn-sm" th:href="@{/products/delete(id=${product.id})}" onclick="return confirm('Are you sure?')">Delete</a>
+                    <form th:action="@{/productsAPI/delete(id=${product.id})}" method="post" style="display: inline;" onsubmit="return confirm('Are you sure?')">
+                        <input type="hidden" name="_method" value="DELETE" />
+                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                    </form>
                 </td>
             </tr>
         </tbody>
